manifests/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  namespace: portfolio
spec:
  selector:
    matchLabels:
      app: portfolio
  # pod def
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      imagePullSecrets:
      - name: portfolio-img-pull-secret
      containers:
      - name: portfolio
        image: acrprivateshubh.azurecr.io/portfolio:242
        resources:
          requests: 
            memory: 32Mi
            cpu: "5m"
          limits:
            memory: "64Mi"
            cpu: "10m"
        ports:
        - containerPort: 80
