manifests/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-svc
  namespace: portfolio
spec:
  selector:
    app: portfolio
  ports:
  - port: 80
    targetPort: 80
